--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ mypy = "^0.812"
 flake8 = "^3.9.2"
 
 [tool.poetry.dev-dependencies]
+pytest-cov = "^2.12.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
