--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ jupyter = "^1.0.0"
 flake8 = "^3.9.2"
 mypy = "^0.812"
 pytest-sugar = "^0.9.4"
+black = "^21.5b2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
